possible gradient cutoff fix

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    background-position: center;
 }
 .img-thumbnail {
     border: 0;
